--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "license": "ISC",
     "dependencies": {
         "@apollo/server": "^4.9.5",
+        "apollo-server-express": "^3.13.0",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "mongoose": "^8.0.0",
